--- a/css/style.css
+++ b/css/style.css
@@ -86,3 +86,73 @@ button[type="submit"] {
 .input-area {
   margin-top: 40px;
 }
+
+.services-area {
+  padding: 120px 0;
+  font-weight: 300;
+}
+
+.section-title {
+  padding-bottom: 90px;
+}
+
+.single-service-box {
+  padding: 18px;
+  border: 1px solid #f3f3f3;
+  margin-bottom: 50px;
+}
+
+.service-icon {
+  font-size: 30px;
+  color: #373737;
+}
+
+.single-service-box h3 {
+  font-size: 20px;
+  padding: 15px 0;
+}
+
+a.btn-read-more {
+  font-size: 15px;
+  color: #373737;
+  font-weight: 400;
+}
+
+.btn-read-more i.zmdi {
+  padding-left: 8px;
+}
+
+.btn-read-more {
+  display: inline-block;
+  padding-bottom: 10px;
+}
+
+.single-service-box:hover {
+  border-color: #ef476f;
+}
+
+.single-service-box:hover .service-icon:hover {
+  color: #ef476f;
+}
+
+.single-service-box:hover .service-icon,
+.single-service-box:hover h3,
+.single-service-box:hover a.btn-read-more {
+  color: #ef476f;
+}
+
+.pdt-50 {
+  padding-top: 60px;
+}
+
+.pdt-50 h2 {
+  line-height: 40px;
+}
+
+.pdt-50 p {
+  margin-top: 15px;
+}
+.pdt-50 .btn-primary {
+  margin-top: 15px;
+  padding: 12px 45px;
+}
